# Canvas.hs

./: .gitignore  .travis.yml  README.md  canvashs.cabal  gistfile1.hs  pushToGithub.sh
.hpc/canvashs-0.1/: CanvasHs.Data.mix  CanvasHs.Launch.mix  CanvasHs.Protocol.Input.mix  CanvasHs.Protocol.Output.mix  CanvasHs.Protocol.mix  CanvasHs.Server.Static.mix  CanvasHs.Server.mix  CanvasHs.mix  Paths_canvashs.mix
canvashs-client/: index.html
canvashs-client/css/: loader.css  main.css
canvashs-client/js/: canvashs.js  customshapes.js  fullscreen.js  jquery.map  main.js  plugins.js  utils.js
canvashs-client/tests/: test.html  test.js
canvashs-client/tests/helpers/: polyfill.js
canvashs-client/tests/spec/: ActionSpec.js  DrawSpec.js  EventSpec.js  ImageTest.js
canvashs-module/: CanvasHs.hs
canvashs-module/CanvasHs/: Colors.hs  Data.hs  FileUtils.hs  InputTranslator.hs  Launch.hs  Protocol.hs  Server.hs  Shutdown.hs
canvashs-module/CanvasHs/Protocol/: ActionOutput.hs  Input.hs  Output.hs  ShapeOutput.hs
canvashs-module/CanvasHs/Server/: Static.hs
canvashs-module/tests/: Test.hs
canvashs-module/tests/CanvasHs/Protocol/: InputSpec.hs  OutputSpec.hs
canvashs-module/tests/CanvasHs/Server/: StaticSpec.hs
canvashs-server/: Server.hs
canvashs-server/CanvasHs/: Data.hs  Server.hs
canvashs-server/tests/: Test.hs
demo/: Buttons.hs  KaartData.hs  Trains.hs  actions.hs  gistfile1.hs  kaart.hs  kleine_demo.hs  split.py
demo/actions/: Commons.hs  README.md  actions.hs
demo/chart/: Chart.hs  README.md
demo/graph/: Graphs.hs  README.md
demo/hello/: Poly.hs  README.md
demo/nederland/: Buttons.hs  README.md  kaart.hs
tests/: JavascriptTests.hs  RunServer.hs  SetupTests.hs  run-jasmine.js
