
Name:                canvashs
Version:             0.1
Author:              Lennart Buit, Joost van Doorn, Pim Jager, Martijn Roo, Thijs Scheepers
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.2
data-files:          canvashs-client/*.html,
                     canvashs-client/js/*.js,
                     canvashs-client/js/vendor/*.js,
                     canvashs-client/css/*.css

Library      
  build-depends: 	base >= 4, QuickCheck >= 2.4, websockets, warp, blaze-html, utf8-string, process >= 1.1, mtl >= 2.1, blaze-builder >= 0.3.1, http-types >= 0.8.1, wai >= 1.4, text >= 
0.11, aeson >= 0.6, bytestring >= 0.10.0.2, ghc-prim

  Exposed-modules:	CanvasHs, CanvasHs.Data
  hs-source-dirs:	canvashs-module
  other-modules:  Paths_canvashs,
                  CanvasHs.Launch,
                  CanvasHs.Server,
                  CanvasHs.Protocol
                  CanvasHs.Protocol.Input
                  CanvasHs.Protocol.Output


Test-Suite javascript-tests
  type:            exitcode-stdio-1.0
  main-is:         tests/JavascriptTests.hs
  build-depends:   
                   base >= 4 && < 5,
                   process >= 1.1



Test-Suite module-test
  type:            exitcode-stdio-1.0
  main-is:         canvashs-module/tests/Test.hs
  build-depends:   
                   base >= 4 && < 5,
                   hspec >= 1.7,
                   QuickCheck >= 2.4


Test-Suite setup-tests
  type:       	   exitcode-stdio-1.0
  main-is:         tests/SetupTests.hs
  build-depends:   
                   base >= 4 && < 5,
                   process >= 1.1

source-repository head
  type:     git
  location: https://github.com/CanvasHS/Canvas.hs
