
Name:                canvashs
Version:             0.1
Author:              Lennart Buit, Joost van Doorn, Pim Jager, Martijn Roo, Thijs Scheepers
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.2
data-files:          canvashs-client/*.html,
                     canvashs-client/js/*.js,
                     canvashs-client/js/*.map,
                     canvashs-client/css/*.css
flag hpc
  default: False
Library
  build-depends: 	base >= 4,
                  QuickCheck >= 2.4,
                  websockets == 0.8.0.0,
                  warp,
                  blaze-html,
                  utf8-string,
                  process >= 1.1,
                  mtl >= 2.1,
                  blaze-builder >= 0.3.1,
                  http-types >= 0.8.1,
                  wai >= 1.4 && < 2.0,
                  text >= 0.11,
                  directory >= 1.2,
                  aeson >= 0.6,
                  bytestring >= 0.10.0.2,
                  split,
                  ghc-prim >= 0.2.0.0,
                  base64-bytestring,
                  timers >= 0.2.0.1,
                  suspend >= 0.1.0.2,
                  filepath, 
                  containers >= 0.4.0.0

  Exposed-modules:	CanvasHs, CanvasHs.Data, CanvasHs.Colors
  hs-source-dirs:	canvashs-module
  other-modules:  Paths_canvashs,
                  CanvasHs.Launch,
                  CanvasHs.Shutdown,
                  CanvasHs.Server,
                  CanvasHs.Server.Static,
                  CanvasHs.Protocol
                  CanvasHs.Protocol.Input
                  CanvasHs.Protocol.ShapeOutput
                  CanvasHs.Protocol.ActionOutput
  if flag(hpc)
    ghc-options: -fhpc


source-repository head
  type:     git
  location: https://github.com/CanvasHS/Canvas.hs
